# grab-bazel-common

tools/test-info-processor/: BUILD.bazel
tools/test-info-processor/src/main/java/com/grab/pax/test/processor/: TestInfoProcessor.kt  TestSuiteExporter.kt
tools/test-info-processor/src/test/java/com/grab/pax/test/processor/: TestSuiteGeneratorTest.kt
