load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "test-info-processor-lib",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
    deps = [
        "//tools/auto-service:auto-service",
        "@com_github_jetbrains_kotlin//:kotlin-stdlib-jdk8",
        "@maven//:com_google_auto_auto_common",
        "@maven//:com_google_auto_service_auto_service",
        "@maven//:com_google_guava_guava",
        "@maven//:com_squareup_javapoet",
        "@maven//:junit_junit",
    ],
)

java_plugin(
    name = "test-info-processor-plugin",
    generates_api = True,
    processor_class = "com.grab.pax.test.processor.TestInfoProcessor",
    deps = [
        ":test-info-processor-lib",
        "@maven//:junit_junit",
        "@maven//:com_google_auto_service_auto_service",
    ],
)

java_library(
    name = "test-info-processor",
    exported_plugins = ["test-info-processor-plugin"],
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "test-info-processor-test",
    size = "small",
    srcs = glob([
        "src/test/java/**/*.kt"
    ]),
    test_class = "com.grab.pax.test.TestSuite",
    deps = [
        ":test-info-processor",
        "@com_github_jetbrains_kotlin//:kotlin-test",
        "@maven//:com_github_tschuchortdev_kotlin_compile_testing",
        "@maven//:junit_junit",
    ],
)
